@@ -867,6 +867,10 @@ And here is a list of all the image attributes you can set:<br>
   <td>{True, False}</td>
   <td>remove pixel aliasing</td>
  </tr>
+ <td>authenticate</td>
+  <td><i>string</i></td>
+  <td>decrypt image with this password.</td>
+ </tr>
   <tr>
  <td>background</td>
   <td><i><a href="color.html">color name</a></i></td>
